--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "purescript-prelude": "~0.1.0",
     "purescript-eff": "~0.1.0",
     "purescript-dom": "~0.1.2",
-    "purescript-aff": "~0.11.0"
+    "purescript-aff": "~0.11.0",
+    "purescript-foreign": "~0.7.0"
   }
 }
