--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "purescript-prelude": "~0.1.0",
     "purescript-eff": "~0.1.0",
-    "purescript-dom": "~0.1.2",
+    "purescript-dom": "~0.2.3",
     "purescript-aff": "~0.11.0",
     "purescript-foreign": "~0.7.0"
+  },
+  "resolutions": {
+    "purescript-dom": "~0.2.3"
   }
 }
