--- a/bower.json
+++ b/bower.json
@@ -11,13 +11,16 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "~0.1.2",
-    "purescript-eff": "~0.1.0",
-    "purescript-dom": "~0.2.3",
-    "purescript-aff": "~0.11.3",
-    "purescript-foreign": "~0.7.0"
+    "purescript-prelude": "~1.0.1",
+    "purescript-eff": "~1.0.0",
+    "purescript-dom": "~2.0.1",
+    "purescript-aff": "~1.1.0",
+    "purescript-foreign": "~1.0.0"
   },
   "resolutions": {
-    "purescript-dom": "~0.2.3"
+    "purescript-dom": "~2.0.1"
+  },
+  "devDependencies": {
+    "purescript-test-unit": "^9.0.0"
   }
 }
