--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,10 @@
 {
   "name": "purescript-remotecallback",
-  "version": "2.0.0",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nwolverson/purescript-remotecallback.git"
+  },
   "moduleType": [
     "node"
   ],
@@ -11,16 +15,16 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "~1.0.1",
+    "purescript-prelude": "~1.1.0",
     "purescript-eff": "~1.0.0",
     "purescript-dom": "~2.0.1",
     "purescript-aff": "~1.1.0",
-    "purescript-foreign": "~1.0.0"
+    "purescript-foreign": "~1.1.0"
   },
   "resolutions": {
     "purescript-dom": "~2.0.1"
   },
   "devDependencies": {
-    "purescript-test-unit": "^9.0.0"
+    "purescript-test-unit": "^9.1.0"
   }
 }
