--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,9 @@ install:
   - npm install -g bower pulp
   - bower install
 script:
-  - pulp test -r test-util/runtest.sh 
+  - npm test
+after_success:
+- >-
+  test $TRAVIS_TAG &&
+  echo $GITHUB_TOKEN | pulp login &&
+  echo y | pulp publish --no-push
